--- a/Asset/simulasi/gglinduksi.html
+++ b/Asset/simulasi/gglinduksi.html
@@ -203,3 +203,15 @@ function drawAmperemeter(x, y, val) {
   pop();
 }
 </script>
+
+<script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+<script>
+  window.MathJax = {
+    tex: {
+      inlineMath: [['$', '$'], ['\\(', '\\)']],
+      displayMath: [['$$', '$$'], ['\\[', '\\]']]
+    }
+  };
+</script>
