--- a/Asset/simulasi/transformator.html
+++ b/Asset/simulasi/transformator.html
@@ -9,7 +9,7 @@
 }
 
 #app-container {
-  max-width: 800px;
+  max-width: 900px;
   margin: auto;
   display: flex;
   flex-direction: column;
@@ -112,33 +112,29 @@ function draw() {
   stroke(50);
   strokeWeight(3);
   noFill();
-  // Kabel Primer (Kiri): 125-75=50, 325-75=250
-  line(50, 200, 250, 200);
-  line(50, 300, 250, 300);
-  // Kabel Sekunder (Kanan): 525-75=450, 725-75=650
-  line(450, 200, 650, 200);
-  line(450, 300, 650, 300);
+  // Kabel Primer (Kiri)
+  line(125, 200, 325, 200);
+  line(125, 300, 325, 300);
+  // Kabel Sekunder (Kanan)
+  line(525, 200, 725, 200);
+  line(525, 300, 725, 300);
 
   // --- DRAW TRANSFORMER CORE ---
   fill(180); stroke(100); strokeWeight(2);
-  // Core utama: 325-75=250
-  rect(250, 120, 200, 260, 10); 
+  rect(325, 120, 200, 260, 10); // Core utama
   fill(255); 
-  // Lubang tengah: 365-75=290
-  rect(290, 160, 120, 180, 5);  
+  rect(365, 160, 120, 180, 5);  // Lubang tengah
 
   // --- DRAW FLUX ANIMATION ---
   drawFlux(AC, Vp_rms);
 
   // --- DRAW COILS ---
-  // Coil Primer: 345-75=270 | Coil Sekunder: 505-75=430
-  drawCoil(270, 160, Np/10, AC * Vp_rms, "PRIMER");
-  drawCoil(430, 160, Ns/10, AC * Vs_rms, "SEKUNDER");
+  drawCoil(345, 160, Np/10, AC * Vp_rms, "PRIMER");
+  drawCoil(505, 160, Ns/10, AC * Vs_rms, "SEKUNDER");
 
   // --- DRAW VOLTMETERS ---
-  // Voltmeter Vp: 125-75=50 | Voltmeter Vs: 725-75=650
-  drawMeter(50, 250, Vp_rms, "VOLTMETER Vp");
-  drawMeter(650, 250, Vs_rms, "VOLTMETER Vs");
+  drawMeter(125, 250, Vp_rms, "VOLTMETER Vp");
+  drawMeter(725, 250, Vs_rms, "VOLTMETER Vs");
 
   time += 0.1;
 }
@@ -149,7 +145,7 @@ function drawFlux(factor, intensity) {
   stroke(0, 100, 255, fluxAlpha * abs(factor));
   strokeWeight(map(intensity, 0, 20, 0, 8));
   noFill();
-  rect(290, 140, 160, 220, 10);
+  rect(345, 140, 160, 220, 10);
   pop();
 }
 
