--- a/Asset/simulasi/gravitasi.html
+++ b/Asset/simulasi/gravitasi.html
@@ -57,6 +57,25 @@
 </head>
 <body class="flex flex-col min-h-screen">
 
+    <!-- Navigation -->
+    <nav class="bg-white border-b border-stone-200 sticky top-0 z-50 shadow-sm">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between h-16">
+                <div class="flex items-center">
+                    <span class="text-2xl font-bold text-slate-800">⚛️ FisikaKode</span>
+                </div>
+                <div class="flex items-center space-x-4">
+                    <button onclick="scrollToSection('theory')" class="text-slate-600 hover:text-sky-600 font-medium transition">Teori</button>
+                    <button onclick="scrollToSection('logic')" class="text-slate-600 hover:text-sky-600 font-medium transition">Logika</button>
+                    <button onclick="scrollToSection('lab')" class="bg-sky-600 text-white px-4 py-2 rounded-md hover:bg-sky-700 transition font-medium">Laboratorium</button>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Main Content -->
+    <main class="flex-grow">
+
         <!-- Hero Section -->
         <section class="max-w-5xl mx-auto px-4 py-16 text-center">
             <h1 class="text-4xl md:text-5xl font-extrabold text-slate-900 mb-6 tracking-tight">
