--- a/Asset/simulasi/gravitasi.html
+++ b/Asset/simulasi/gravitasi.html
@@ -37,7 +37,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
-            background-color: #e6d4af; /* Warm off-white */
+            background-color: #ffffff; /* Warm off-white */
             color: #334155; /* Slate 700 */
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
